# whamm-live

./: .gitignore  .vscodeignore  Cargo.toml  GUIDE.md  LICENSE  README.md  live-whamm-0.1.0.vsix  package.json  tsconfig.json
.github/workflows/: fsm_test.yml  jest_test.yml
media/: vscode.css  whamm_title.css
src/: calculator.ts  extension.ts  extensionContext.ts  lib.rs  sidebarProvider.ts  whammServer.ts
src/extensionListeners/: cursorChangesListener.ts  documentChangesListener.ts  lineHighlighterDecoration.ts  listenerHelper.ts  sampleAPIData.ts
src/model/: fsm.ts  fsm_helper.ts  fsm_section_order.ts  model.ts  sampleAPIData.ts  svelte_model.ts  types.ts
src/user_interface/: sidebarProvider.ts  sidebarProviderHelper.ts  wasmWebviewPanel.ts  webviewPanel.ts  wizardWebviewPanel.ts
src/whamm_server/: mod.rs
svelte/: README.md  package.json  vite.app.config.js  vite.sidebar.config.js  vite.webview.config.js
svelte/src/: App.svelte  sidebar.svelte  sidebar.ts  webview.svelte  webview.ts
tests/: best_effort_highlight.test.toml  best_effort_highlight.test.ts  best_effort_highlight_run.test.toml  cell.test.toml  cell.test.ts  fsm.test.toml  fsm.test.ts  fsm_errors.test.toml  fsm_helper.test.ts  fsm_section_order.test.toml  fsm_section_order.test.ts  model_helper.test.toml  model_helper.test.ts  model_helper_intergration.test.ts
tests/unordered_wat/: add.wat  app.wat  escaped_string.wat  everything.wat  fold_expression.wat  functions.wat  hello.wat  imports.wat  producers.wat  something.wat  start.wat
wit/: calculator.wit  whamm-server.wit
(+67 files in other folders)
