[package]
name = "whamm-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wirm = "1.0.0"
wasmprinter = "0.235.0"
wat = "1.235.0"
# whamm = {path = "../whamm-forked"}
wit-bindgen = "0.21.0"
pest = "2.8.1"
